# terminal_library

./: README.md  pubspec.yaml
.github/: FUNDING.yml
native_lib/: CMakeLists.txt  forkpty.c  forkpty.h  readme.md  terminal_pty.c  terminal_pty_win.c
package/terminal_library/: .gitignore  CHANGELOG.md  out.js  out.js.deps  out.js.map  pubspec.yaml  pubspec_overrides.yaml
package/terminal_library/dev/: terminal_library_dart.dart  terminal_library_scheme.dart  test.dart
package/terminal_library/example/: pubspec.yaml
package/terminal_library/lib/: terminal_library.dart  terminal_library_core.dart
package/terminal_library_android/: pubspec.yaml
package/terminal_library_android/lib/: terminal_library_android.dart
package/terminal_library_android/test/: terminal_library_android_test.dart
package/terminal_library_apis/: pubspec.yaml
package/terminal_library_apis/example/: terminal_library_apis_example.dart
package/terminal_library_apis/lib/: terminal_library_apis.dart
package/terminal_library_apis/test/: terminal_library_apis_test.dart
package/terminal_library_assets_flutter/: pubspec.yaml
package/terminal_library_assets_flutter/lib/: terminal_library_assets_flutter.dart
package/terminal_library_assets_flutter/test/: terminal_library_assets_flutter_test.dart
package/terminal_library_cli/: pubspec.yaml
package/terminal_library_cli/example/: terminal_library_cli_example.dart
package/terminal_library_cli/lib/: terminal_library_cli.dart
package/terminal_library_cli/test/: terminal_library_cli_test.dart
package/terminal_library_client/: pubspec.yaml
package/terminal_library_client/example/: terminal_library_client_example.dart
package/terminal_library_client/lib/: terminal_library_client.dart
package/terminal_library_dart/: pubspec.yaml  pubspec_overrides.yaml
package/terminal_library_flutter/: .flutter-plugins  .flutter-plugins-dependencies  CHANGELOG.md  LICENSE  README.md  pubspec.yaml  pubspec_overrides.yaml
package/terminal_library_flutter_pty/: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
package/terminal_library_flutter_pty/android/: build.gradle  (+1 more)
package/terminal_library_flutter_pty/native_lib copy/: CMakeLists.txt  terminal_pty_unix.c
package/terminal_library_flutter_pty/native_lib copy/include/: dart_api.h
package/terminal_library_flutter_pty/src/: CMakeLists.txt  terminal_library_flutter_pty.c  terminal_library_flutter_pty.h  terminal_library_flutter_pty_unix.c  terminal_library_flutter_pty_win.c
package/terminal_library_fucshia/: pubspec.yaml
package/terminal_library_ios/: pubspec.yaml
package/terminal_library_isar_scheme/: pubspec.yaml
package/terminal_library_linux/: pubspec.yaml
package/terminal_library_macos/: pubspec.yaml
package/terminal_library_scheme/: pubspec.yaml
package/terminal_library_server/: README.md  pubspec.yaml
package/terminal_library_web/: pubspec.yaml
package/terminal_library_windows/: pubspec.yaml
terminal_library_documentation/: README.md  pubspec.yaml
terminal_library_documentation/lib/: documentation_main.dart
terminal_library_documentation/linux/: CMakeLists.txt  my_application.cc
terminal_library_documentation/test/: widget_test.dart
terminal_library_documentation/web/: index.html  manifest.json
terminal_library_documentation/windows/: CMakeLists.txt
test/: terminal_library_test.dart
(+211 files in other folders)
